# pd_alex4

./: .gitignore  CMakeLists.txt  meson.build
Source/: config  pdex.elf  pdxinfo
Source/scripts/: intro.txt  outro.txt
alex/: actor.c  actor.h  alex4.h  bullet.c  bullet.h  control.c  control.h  data.c  data.h  edit.c  edit.h  fixed_math.c  fixed_math.h  hisc.c  hisc.h  main.c  main.h  map.c  map.h  misc.c  misc.h  options.c  options.h  particle.c  particle.h  player.c  player.h  port.h  script.c  script.h  scroller.c  scroller.h  shooter.c  shooter.h  sound.h  timer.c  timer.h  token.c  token.h  unix.c
alex/sdl/: port.c  port.h  sound.c
assets/data/: data_files.h
assets/images_mono/: bg0.xcf
ext/iniparser/: iniparser.c
src/: data_files.h  entity_def_custom.h  game_main.c  game_main.h  options.c  options.h  port.c  port.h  render_custom.h  sound.c
tools/: prepare_assets.sh  prepare_assets_png.sh  prepare_assets_qoa.sh  prepare_dithered.py  prettify.sh  push.sh
